--- a/video-config/video-service-user-dev.properties
+++ b/video-config/video-service-user-dev.properties
@@ -1,7 +1,6 @@
 server.port=8020
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8000/eureka/
 logging.level.root=info
-#ÊµÀıÃû³ÆÏÔÊ¾ip
+#å®ä¾‹åç§°æ˜¾ç¤ºip
 eureka.instance.preferIpAddress=true
-#Ö»Ó¦¸ÃÔÚapplication.ymlÖĞÉèÖÃ¡£Èç¹ûÉèÖÃÔÚbootstrap.ymlÖĞ½«»áµ¼ÖÂÒ»Ğ©²»Á¼µÄ¸±×÷ÓÃ£¬ÀıÈçÔÚEurekaÖĞ×¢²áµÄÓ¦ÓÃÃû³ÆÊÇUNKNOWNµÈ¡£
+#åªåº”è¯¥åœ¨application.ymlä¸­è®¾ç½®ã€‚å¦‚æœè®¾ç½®åœ¨bootstrap.ymlä¸­å°†ä¼šå¯¼è‡´ä¸€äº›ä¸è‰¯çš„å‰¯ä½œç”¨ï¼Œä¾‹å¦‚åœ¨Eurekaä¸­æ³¨å†Œçš„åº”ç”¨åç§°æ˜¯UNKNOWNç­‰ã€‚
 #eureka.client.healthcheck.enabled=true
