--- a/video-config/video-service-user-dev.properties
+++ b/video-config/video-service-user-dev.properties
@@ -2,5 +2,6 @@ server.port=8020
 logging.level.root=info
 #实例名称显示ip
 eureka.instance.preferIpAddress=true
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8000/eureka/
 #只应该在application.yml中设置。如果设置在bootstrap.yml中将会导致一些不良的副作用，例如在Eureka中注册的应用名称是UNKNOWN等。
 #eureka.client.healthcheck.enabled=true
