--- a/video-config/video-service-user-dev.properties
+++ b/video-config/video-service-user-dev.properties
@@ -3,3 +3,15 @@ server.port=8020
 logging.level.root=info
 #实例名称显示ip
 eureka.instance.preferIpAddress=true
+
+#数据库连接地址
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tbl_user?characterEncoding=utf8&characterSetResults=utf8&useUnicode=false&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#mybatis配置.xml文件路径
+mybatis.mapper-locations=classpath*:mapper/*.xml
+mybatis.type-aliases-package=com.aspire
+#swagger
+swagger.ui=true
+eureka.instance.status-page-url-path=/swagger-ui.html
