--- a/video-config/video-service-user-dev.properties
+++ b/video-config/video-service-user-dev.properties
@@ -5,7 +5,7 @@ logging.level.root=info
 eureka.instance.preferIpAddress=true
 
 #数据库连接地址
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tbl_user?characterEncoding=utf8&characterSetResults=utf8&useUnicode=false&autoReconnect=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sys?characterEncoding=utf8&characterSetResults=utf8&useUnicode=false&autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
