--- a/video-config/video-service-user-dev.properties
+++ b/video-config/video-service-user-dev.properties
@@ -1,6 +1,5 @@
 #设置注册中心端口
 server.port=8020
-logging.level.root=info
 #实例名称显示ip
 eureka.instance.preferIpAddress=true
 
@@ -15,3 +14,11 @@ mybatis.type-aliases-package=com.aspire
 #swagger
 swagger.ui=true
 eureka.instance.status-page-url-path=/swagger-ui.html
+
+#--------------------log显示--------------------
+#日志显示格式
+logging.pattern.console=%level %msg%n
+#日志级别 warn减少项目启动时日志输出
+logging.level.root=warn
+#显示dao层执行的SQL语句
+logging.level.com.aspire.dao.mapper=debug
